# Discrete2

./: .gitignore  CMakeLists.txt  README.md
Wahlaan/: Coloreo.c  Construye.c  Construye.h  Info.c  Lista.c  Rii.h  TestMain.c  TestOrdenacion.c  U32ToString.h
Whalaan/: Carga.c  Hash.c  Hash.h  Lista.h  Ordenacion.c  Ordenacion.h  TestMain.h  TestOrdenacion.h  U32ToString.c  main.c
input/: david.md  fpsol2i1.md
